Mobile map size fix; overflow fix; button fix

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -11,8 +11,8 @@
 }
 
 .map-box {
-  width: 100vw; /* Set the width of the box */
-  height: 100vh; /* Set the height of the box */
+  width: 100%; /* Set the width of the box */
+  height: 100%; /* Set the height of the box */
   display: flex;
   position: relative;
   justify-content: center;
@@ -28,7 +28,7 @@
 }
   
 .side-panel {
-  position: absolute;
+  position: relative;
   right: 0;
   top: 0;
   width: 250px;
@@ -39,8 +39,7 @@
   padding: 20px;
   transform: translateX(200%);
   transition: transform 0.3s ease-in-out;
-  overflow-y: auto;  /* Enables vertical scrolling */
-  overflow-x: hidden;
+
 }
 
 .side-panel h1 {
