--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
     padding: 0;
     margin: 0;
     font-synthesis: none;
@@ -24,5 +25,4 @@
 html, body {
   height: 100vh;
   width: 100vw;
-  /*overflow: hidden;*/
 }
